--- a/FE/src/app/globals.css
+++ b/FE/src/app/globals.css
@@ -14,6 +14,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  align-items: center;
+  justify-items: center;
+  padding: 80px;
 }
 
 body {
