--- a/FE/src/app/pages/login/login.module.css
+++ b/FE/src/app/pages/login/login.module.css
@@ -7,3 +7,13 @@
   justify-content: space-between;
   margin: 10px
 }
+
+.buttonWrapper {
+  display: flex;
+  justify-content: end;
+  margin: 10px;
+}
+
+.button:last-child {
+  margin-left: 5px
+}
