feat: adding mui styles

--- a/FE/src/app/pages/login/login.module.css
+++ b/FE/src/app/pages/login/login.module.css
@@ -1,5 +1,13 @@
+.loginWrapper {
+  max-width: 100vw;
+  overflow-x: hidden;
+  align-items: center;
+  justify-items: center;
+  padding: 20px;
+}
+
 .wrapperLogin {
-  width: 270px;
+  width: 350px;
 }
 
 .wrapperLabels {
@@ -14,6 +22,7 @@
   margin: 10px;
 }
 
-.button:last-child {
+.button {
+  height: 25px;
   margin-left: 5px
 }
